cambiamos color del titulo en pagina contacto

--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="">Robo o extravio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./pages/contactos.html">Contactos</a>
+                  <a class="nav-link bg-prim" href="./pages/contactos.html">Contactos</a>
                 </li>
               </ul>
             </div>
@@ -64,7 +64,7 @@
         </nav>
       </header>
     <main>
-        <h1 class="container-fluid text-center bg-primary-subtle pb-5 pt-3">Contactos</h1>
+        <h1 class="container-fluid text-center pb-5 pt-3 bg-primary-subtle text-info">Contactos</h1>
         <form class="container-fluid row me-3">
           <article class="col-md-6 ">
             <label for="nombreApellido" class="form-label mt-3">
