--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -63,8 +63,8 @@
           </div>
         </nav>
       </header>
-    <main>
-        <h1 class="container-fluid text-center pb-5 pt-3 bg-primary-subtle text-info">Contactos</h1>
+    <main class="container-fluid">
+        <h1 class="container-fluid text-center pb-5 pt-3 bg-primary-subtle">Contactos</h1>
         <form class="container-fluid row me-3">
           <article class="col-md-6 ">
             <label for="nombreApellido" class="form-label mt-3">
@@ -100,8 +100,8 @@
 
           </article>
 
-          <article class="col-md-6 text-center border bg-body-secondary">
-           <p>Aqui pondremos un mapita </p>
+          <article class="col-md-6 text-center border bg-body-secondary mt-3 col-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3560.10606794951!2d-65.20974192556409!3d-26.83657849002515!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94225d3ad7f30f1d%3A0xf8606cd659b8e3e4!2sRollingCode%20School!5e0!3m2!1ses-419!2sar!4v1718191466154!5m2!1ses-419!2sar"  width="450" height="400"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </article>
           
         </form>
